--- a/4_exercise/exercise.html
+++ b/4_exercise/exercise.html
@@ -292,6 +292,15 @@ dataset &lt;- df_ausprivauto0405 # store as dataset for easier re-use of previou
 </div>
 <div id="descriptive-analysis-of-the-portfolio" class="section level1">
 <h1>Descriptive Analysis of the portfolio</h1>
+<pre class="r"><code>#</code></pre>
+</div>
+<div id="fit-a-glm-for-claims-frequency" class="section level1">
+<h1>Fit a GLM for Claims Frequency</h1>
+<pre class="r"><code>#</code></pre>
+</div>
+<div id="fit-a-glm-for-claims-severity" class="section level1">
+<h1>Fit a GLM for Claims Severity</h1>
+<pre class="r"><code>#</code></pre>
 </div>
 
 
